style: make corrections on light and dark mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,14 +1,81 @@
-/* Base styles */
+:root {
+    --root-color: #d8d4d4; /* Define your root color here */
+    --light-background: rgba(152, 152, 152, 0.808);
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
-    color: #333; /* Light mode default color */
-    background-color: #f5f5f5; /* Light mode default background */
+    color: #2b2b2b; /* Light mode default color */
+    background-color: var(--light-background); /* Light mode default background */
     transition: background-color 0.9s ease-in-out;
 }
 
 h1,
 h4 {
     margin: 0;
+}
+
+.category-bubble {
+    border-radius: 8px;
+    padding: 1px 6px;
+    margin-left: 5px;
+    font-size: 12px;
+    color: rgb(252, 252, 252);
+}
+
+.form-control {
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+@media (min-width: 768px) {
+    .form-control {
+        width: calc(50% - 10px);
+        display: inline-block;
+        margin-bottom: 20px;
+    }
+}
+
+input[type='text'],
+select {
+    width: calc(100% - 10px);
+    height: 40px;
+    padding: 5px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: rgb(255, 254, 254);
+    background-color: var(--light-background);
+}
+input[type='text']::placeholder,
+select::placeholder {
+    color: rgb(255, 255, 255); /* Adjust opacity as needed */
+}
+
+.form-button {
+    background-color: #2b2b2b;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 40px;
+}
+.chart-container {
+    background-color: var(--root-color);
+}
+
+.add-transaction-section {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: var(--root-color);
+}
+
+.inc-exp-container {
+    background-color: var(--root-color);
+    border-radius: 20px;
+    display: flex;
+    margin-top: 20px;
 }
