--- a/src/assets/components.css
+++ b/src/assets/components.css
@@ -1,6 +1,6 @@
 /* Button styles */
 button {
-    background-color: #333; /* Light mode default background */
+    background-color: #2b2b2b; /* Light mode default background */
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -10,7 +10,7 @@ button {
 }
 
 button:hover {
-    background-color: #222; /* Light mode hover background */
+    background-color: #b2b2b2; /* Light mode hover background */
 }
 
 /* Dropdown styles */
@@ -49,7 +49,7 @@ button:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #f5f5f5; /* Dropdown hover background color */
+    background-color: var(--root-color); /* Dropdown hover background color */
 }
 
 .dropdown:hover .dropdown-content {
